[gd_scene load_steps=7 format=2]

[ext_resource path="res://UserInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UserInterface/Quit.tscn" type="PackedScene" id=3]
[ext_resource path="res://UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UserInterface/userInterface.gd" type="Script" id=5]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=6]

[node name="userInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 32.0
margin_right = -31.0
margin_bottom = 63.0
theme = ExtResource( 6 )
text = "Score: %s"

[node name="PauseOverLay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.113725 )

[node name="pausedLabel" parent="PauseOverLay" instance=ExtResource( 1 )]
pause_mode = 2
margin_top = 136.0
margin_bottom = 167.0
text = "PAUSED"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverLay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.5
margin_top = -80.0
margin_right = 100.5
margin_bottom = 80.0

[node name="RetryButton" parent="PauseOverLay/PauseMenu" instance=ExtResource( 4 )]
margin_right = 201.0
margin_bottom = 50.0

[node name="ChangeSceneButton" parent="PauseOverLay/PauseMenu" instance=ExtResource( 2 )]
margin_top = 54.0
margin_right = 201.0
margin_bottom = 105.0
text = "Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="Quit" parent="PauseOverLay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 109.0
margin_right = 201.0
margin_bottom = 160.0
